--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Super money bank</title>
+  <title>Super Money Bank</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+
+    ul {
+      list-style-position: inside;
+      padding: 0;
+    }
+
+    a {
+      margin: 0 5px;
+      text-decoration: none;
+      color: #0d6efd;
+      font-weight: bold;
+    }
+
+    img {
+      display: block;
+      margin: auto;
+    }
+
+    audio {
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Welcome Super money bank</h1>
+<h1>Welcome Super Money Bank</h1>
 <p><b>Your trusted partner in secure banking</b></p>
 
 <hr>
 
-<!-- Navigation Menu -->
-<a href="home.html">Home</a> |
+<a href="index.html">Home</a> |
 <a href="about.html">About</a> |
 <a href="contact.html">Contact</a> |
+<a href="open-account.html">Open New Account</a>
 
 <hr>
 
-<!-- Bank Image Section -->
-<h2>super money Bank</h2>
-<img src="https://imgs.search.brave.com/tKJl8Femmx70jTWjkMimijskleCvqZzwlq6-4xniY2g/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzZkLzIw/LzE1LzZkMjAxNTZh/Nzg0YWQxYTI0MTEw/ZDYzNzljYzc5MTU2/LmpwZw" alt="My Bank Building" width="350">
+<h2>Super Money Bank</h2>
+<img src="https://imgs.search.brave.com/tKJl8Femmx70jTWjkMimijskleCvqZzwlq6-4xniY2g/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzZkLzIw/LzE1LzZkMjAxNTZh/Nzg0YWQxYTI0MTEw/ZDYzNzljYzc5MTU2/LmpwZw"
+     alt="My Bank Building" width="350">
 
 <p>
 My Bank offers safe, secure, and digital banking solutions for individuals
@@ -27,7 +54,6 @@ and businesses. Our goal is to make banking easy, fast, and reliable.
 </p>
 
 <hr>
-
 
 <h2>Bank Information</h2>
 <ul>
@@ -38,7 +64,6 @@ and businesses. Our goal is to make banking easy, fast, and reliable.
 </ul>
 
 <hr>
-
 
 <h2>Our Services</h2>
 <ul>
@@ -51,13 +76,10 @@ and businesses. Our goal is to make banking easy, fast, and reliable.
 
 <hr>
 
-
 <h2>Welcome Message</h2>
-  <audio controls>
-            <source src="audio/yo-tu-welcome-to-the-afterlife-looping-tune-225538 (1).mp3">
-        </audio>
+<audio controls>
+  <source src="audio/yo-tu-welcome-to-the-afterlife-looping-tune-225538 (1).mp3">
   Your browser does not support the audio element.
-  
 </audio>
 
 <hr>
@@ -66,5 +88,3 @@ and businesses. Our goal is to make banking easy, fast, and reliable.
 
 </body>
 </html>
-
-
